--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,5 +1,5 @@
 name: Tests
-on: [push, pull_request]
+on: [push]
 jobs:
   tests:
     runs-on: ubuntu-latest
@@ -30,20 +30,15 @@ jobs:
           fi
 
           if [ "${{ matrix.python-version }}" == "3.9" ]; then
-            sed -i '/ndonnx/d' requirements-dev.txt
+            sed -i '/^ndonnx/d' requirements-dev.txt
           fi
+
           python -m pip install -r requirements-dev.txt $PIP_EXTRA
 
       - name: Run Tests
         run: |
-          
           if [[ "${{ matrix.numpy-version }}" == "1.21" || "${{ matrix.numpy-version }}" == "dev" ]]; then
              PYTEST_EXTRA=(-k "numpy and not jax and not torch and not dask and not sparse")
-          else
-             PYTEST_EXTRA=()
-          fi
-          if [[ "${{ matrix.python-version }}" == "3.9" ]]; then
-             PYTEST_EXTRA+=(-k "not ndonnx")
           fi
           pytest -v "${PYTEST_EXTRA[@]}"
 
