--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -28,6 +28,11 @@ jobs:
           else
             PIP_EXTRA='numpy==1.26.*'
           fi
+
+          if [ "${{ matrix.python-version }}" == "3.9" ]; then
+            sed -i '/^ndonnx/d' requirements-dev.txt
+          fi
+
           python -m pip install -r requirements-dev.txt $PIP_EXTRA
 
       - name: Run Tests
